--- a/GameDev/Assembly-CSharp-vs.csproj
+++ b/GameDev/Assembly-CSharp-vs.csproj
@@ -51,6 +51,7 @@
      <Compile Include="Assets\Scripts\FlipLevel.cs" />
      <Compile Include="Assets\Scripts\MoveObstacles.cs" />
      <Compile Include="Assets\Scripts\ObstaclesSpwanner.cs" />
+     <Compile Include="Assets\Scripts\Reset.cs" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
      <None Include="Assets\Standard Assets\Characters\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
      <None Include="Assets\Standard Assets\Characters\FirstPersonCharacter\FirstPersonCharacterGuidelines.txt" />
